support cryptographic signature as trusted model
